--- a/index.adoc
+++ b/index.adoc
@@ -3,6 +3,7 @@
 :toc: macro
 :toc-title:
 :toclevels: 2
+:imagesdir: ./_images
 
 
 
@@ -29,12 +30,12 @@ Design integration applications, and deploy them anywhere. Find out how to work 
 ====
 
 
-image:anypoint-platform-screen.png[anypoint-platform-screen]
+//image:anypoint-platform-screen.png[anypoint-platform-screen]
 
 [[getting-started]]
 == Getting Started
 
-Try the application design and development quickstarts in this link:/getting-started[Getting Started] section, or dig into some the tools right away with link:/api-manager/designing-your-api#accessing-api-designer[API Designer], accessed from link:/api-manager/[API Manager].
+Try the application design and development quickstarts in the link:/getting-started[Getting Started] section, or dig into some the tools right away with link:/api-manager/designing-your-api#accessing-api-designer[API Designer], accessed from link:/api-manager/[API Manager].
 
 [NOTE]
 With our programming language-agnostic platform, you can develop iteratively and quickly sync projects shared between teams.
@@ -124,13 +125,13 @@ Note that this is not intended to be a production server, as certain restriction
 [[deploy-standalone]]
 === Deploy to Standalone Mule Server
 
-image:logo-server-active.png[mule-server]
+//image:logo-server-active.png[mule-server]
 
 Deploy to a link:/mule-user-guide/v/3.8/starting-and-stopping-mule-esb[standalone Mule server] – available as an _Enterprise_ or _Community_ product.
 
 The most direct method to launch and interact with a Mule runtime instance is the link:/mule-user-guide/v/3.8/starting-and-stopping-mule-esb[command line] of the server you run Mule on.
 
-image:infrastructure-standalone.png[standalone]
+//image:infrastructure-standalone.png[standalone]
 
 Deploying a Studio-built Mule application in production on an Mule Enterprise server involves three steps:
 
@@ -141,7 +142,7 @@ Deploying a Studio-built Mule application in production on an Mule Enterprise se
 [[deploy-mule-server]]
 === Deploy to Mule Server using Runtime Manager
 
-image:logo-hybrid-active.png[CloudHubLogo133high]
+//image:logo-hybrid-active.png[CloudHubLogo133high]
 
 Deploy an application using the link:/runtime-manager/[Runtime Manager] to a Mule link:/runtime-manager/managing-servers[server], or to several servers arranged as a "server group" or "cluster".
 
@@ -150,12 +151,12 @@ The link:/runtime-manager/deploying-to-your-own-servers[Runtime Manager console]
 [NOTE]
 To make a server visible to the Runtime Manager, you must first link:/runtime-manager/managing-servers#add-a-server[register it].
 
-image:infrastructure-hybrid.png[hybrid]
+//image:infrastructure-hybrid.png[hybrid]
 
 [[deploy-cloudhub]]
 === Deploy to CloudHub using Runtime Manager
 
-image:logo-cloud-active.png[CloudHubLogo133high]
+//image:logo-cloud-active.png[CloudHubLogo133high]
 
 Deploy to link:/runtime-manager/cloudhub[CloudHub] via the link:/runtime-manager/[Runtime Manager], our integration Platform as a Service (iPaaS).
 
@@ -168,7 +169,7 @@ Virtual machines in the cloud are referred to as workers.
 something about autoscaling when it comes out
 ////
 
-image:infrastructure-simple-cloud.png[cloud]
+//image:infrastructure-simple-cloud.png[cloud]
 
 Applications can be deployed to different link:/access-management/environments[environments] (such as _production_ or _QA_) to keep in line with your workflow.
 
@@ -188,13 +189,13 @@ Additionally, you can use the link:/runtime-manager/anypoint-platform-cli[Anypoi
 [NOTE]
 This alternative is currently in *Limited Access*.
 
-image:logo-server-active.png[mule-server]
+//image:logo-server-active.png[mule-server]
 
 You can host an instance of the entire Anypoint Platform on your own local system, and manage your locally deployed applications through it without ever exposing any of your information outside your datacenter.
 
 For instructions on how to install the necessary infrastructure, contact your sales representative.
 
-image:infrastructure-onprem.png[onprem]
+//image:infrastructure-onprem.png[onprem]
 
 ////
 [TIP]
@@ -204,7 +205,7 @@ If your IT infrastructure is built around the Pivotal Cloud Foundry model, you m
 [[mule-server-mmc]]
 === Deploy to Mule Server using Mule Management Console
 
-image:mmc.png[mmc,width=26]
+//image:mmc.png[mmc,width=26]
 
 The link:/mule-management-console/v/3.8[Mule Management Console (MMC)] is another tool for deployment and management of Mule runtime instances running on local servers.
 
@@ -213,7 +214,7 @@ Using MMC you can group your Mule servers into clusters or server groups, ensuri
 [NOTE]
 MMC is pending full replacement by Runtime Manager, and hence will eventually be deprecated. There is a migration tool for moving your MMC deployments to Runtime Manager.
 
-image:infrastructure-mmc.png[mmc]
+//image:infrastructure-mmc.png[mmc]
 
 
 ////
@@ -231,7 +232,7 @@ Several tools are available for you to monitor your application's performance, a
 
 === Runtime Manager
 
-image:runtime-manager-logo.png[CloudHubLogo133high,width=26]
+//image:runtime-manager-logo.png[CloudHubLogo133high,width=26]
 
 link:/runtime-manager/[Runtime Manager] provides multiple tools to link:/runtime-manager/managing-deployed-applications[Manage] and link:/runtime-manager/monitoring-applications[Monitor] your applications and, for those running on-prem, the servers they run on. Runtime Manager provides a single "glass pane" through which you can view all activity relevant to your running Mule applications, regardless of deployment scenario (cloud/on-prem).
 
@@ -263,7 +264,7 @@ To better understand how options differ between applications deployed to CloudHu
 
 === API Manager
 
-image:api-logo.png[AnypointAPI_manager,width=26]
+//image:api-logo.png[AnypointAPI_manager,width=26]
 
 link:/api-manager[API Manager], formerly known as *Anypoint Platform for APIs*, is an API and service registry and governance platform. Built from the ground up to support cloud and hybrid use cases, the platform governs all of your service and API assets, whether internal or external, behind a firewall or in the cloud, all via one platform. Place a proxy in front of your application to apply traffic policies, view usage metrics and more.
 
@@ -286,7 +287,7 @@ Alternatively, you may want to use Anypoint Platform to manage an API that was n
 
 === Access Management
 
-image:settings-logo.png[access management,width=26]
+//image:settings-logo.png[access management,width=26]
 
 As an administrator of your organization using the *Access Management* tool, you can manage user access and clearance level for your organization, its business groups, as well as access to the rest of its Anypoint Platform tools.
 //wasn't totally clear on the above, esp access to AP Platform
@@ -296,7 +297,7 @@ Create custom roles for users of Runtime Manager and grant custom permissions to
 
 === Mule Management Console (MMC)
 
-image:mmc.png[mmc,width=26]
+//image:mmc.png[mmc,width=26]
 
 link:/mule-management-console/v/3.8/[MMC] provides robust runtime management capabilities for on-premises deployments, including high-availability clustering, monitoring features, email alerts, logs, etc.
 
