MQ FIFO review changes

--- a/anypoint-mq/v/latest/mq-queues-and-exchanges.adoc
+++ b/anypoint-mq/v/latest/mq-queues-and-exchanges.adoc
@@ -13,7 +13,7 @@ Anypoint MQ now provides first in, first out (FIFO) processing to enable orderin
 * FIFO queues currently support up to 300 transactions per second. In addition, FIFO permits up to 20,000 inflight messages per queue.
 * Messages can persist for up to 2 weeks in Anypoint MQ with the default set at 4 days.
 * The maximum size of a message is 10 MB.
-* FIFO queues are only available in the US West region.
+* FIFO queues are currently only available in the US West region.
 
 Organization administrators or owners can view the current and past months usage - the total number of messages and API requests. This information is accessed from the Access Management page. For more information, see link:/anypoint-mq/mq-usage[Anypoint MQ Usage Information].
 
@@ -26,10 +26,10 @@ A queue is a temporary storage area for a message. You can use the MQ feature in
 Anypoint MQ lets you create either a first-in first-out (FIFO) queue
 that ensures your messages arrive in order, or you can create a non-FIFO
 queue where messages arrive without order.
-FIFO queues are best for when message speed is less critical.
+FIFO queues are best for when message order is more critical than the speed of delivery.
 Non-FIFO queues are good when message speed needs to be as fast as possible.
 
-IMPORTANT: FIFO queues are only available in the US West region. If your Anypoint MQ user interface points to an alternate region, you cannot create a FIFO queue.
+IMPORTANT: FIFO queues are currently only available in the US West region. If your Anypoint MQ user interface points to an alternate region, you cannot create a FIFO queue.
 
 To create a queue or FIFO queue:
 
