Exactly once note

--- a/anypoint-mq/v/latest/mq-queues-and-exchanges.adoc
+++ b/anypoint-mq/v/latest/mq-queues-and-exchanges.adoc
@@ -30,6 +30,10 @@ Anypoint MQ now provides first in, first out (FIFO) processing to enable orderin
 Browser feature, you have to first acknowledge that consuming messages from the user interface may put messages out of order if you are also programatically consuming messages in the same queue using an application.
 * Only a FIFO dead letter queue can be used as a DLQ for a FIFO queue.
 
+*Exactly Once Delivery:*
+
+Unlike standard queues, FIFO queues do not introduce duplicate messages. FIFO queues help you avoid sending duplicates to a queue. If you retry sending a message within the 5-minute deduplication interval, Anypoint MQ FIFO does not introduce any duplicates into the queue.
+
 Before creating a FIFO queue, change the region to *US West*:
 
 image:mqfifo-set-to-us-west.png[mqfifo-set-to-us-west]
