--- a/anypoint-mq/v/latest/mq-queues-and-exchanges.adoc
+++ b/anypoint-mq/v/latest/mq-queues-and-exchanges.adoc
@@ -32,7 +32,7 @@ Browser feature, you have to first acknowledge that consuming messages from the 
 
 *Exactly Once Delivery:*
 
-Unlike standard queues, FIFO queues do not introduce duplicate messages. FIFO queues help you avoid sending duplicates to a queue. If you retry sending a message within the 5-minute deduplication interval, Anypoint MQ FIFO does not introduce any duplicates into the queue.
+Unlike standard queues, FIFO queues do not introduce duplicate messages. FIFO queues help you avoid sending duplicates to a queue. If you retry sending a message  with the same message ID within the 5-minute deduplication interval, Anypoint MQ FIFO does not introduce any duplicates into the queue. You can set a message ID in Anypoint Studio. If a message ID is not set in Studio, MQ auto generates a unique message ID for each message that's sent to a queue.
 
 Before creating a FIFO queue, change the region to *US West*:
 
