--- a/anypoint-exchange/v/latest/access.adoc
+++ b/anypoint-exchange/v/latest/access.adoc
@@ -6,3 +6,18 @@ From Anypoint Platform -
 From Browser - 
 From Anypoint Studio - 
 ////
+
+== Access From Anypoint Platform
+
+== Access From a Browser
+
+== Access from Anypoint Studio
+
+== See Also
+
+* link:/anypoint-exchange/[Anypoint Exchange]
+* link:/anypoint-exchange/consume[Consume from Exchange]
+* link:install-connector/install-connector[Install a Connector]
+* link:/anypoint-exchange/create-portal[Create Portal]
+* link:/anypoint-exchange/add-asset[Add Asset]
+* link:/anypoint-exchange/administer[Administer Exchange]
