--- a/anypoint-exchange/v/latest/add-asset.adoc
+++ b/anypoint-exchange/v/latest/add-asset.adoc
@@ -8,3 +8,23 @@ Add a New Version of an Asset
 Browse Across Different Asset Versions
 Upload a Custom Asset - Upload JARs, node.js, and other executables
 ////
+
+== Upload a REST Asset
+
+== Upload a SOAP Asset
+
+== Add a New Version of an Asset
+
+== Browse Across Asset Versions
+
+== Upload a Custom Asset
+
+
+== See Also
+
+* link:/anypoint-exchange/[Anypoint Exchange]
+* link:/anypoint-exchange/access[Access Exchange]
+* link:/anypoint-exchange/consume[Consume from Exchange]
+* link:install-connector/install-connector[Install a Connector]
+* link:/anypoint-exchange/create-portal[Create Portal]
+* link:/anypoint-exchange/administer[Administer]
