--- a/anypoint-exchange/v/latest/consume.adoc
+++ b/anypoint-exchange/v/latest/consume.adoc
@@ -5,3 +5,11 @@ Consume an API - To use an API in <Mozart and> Studio
 Open an Example - Working with Exchange examples
 Implement a Template - Working with Exchange templates
 ////
+== See Also
+
+* link:/anypoint-exchange/[Anypoint Exchange]
+* link:/anypoint-exchange/access[Access Exchange]
+* link:install-connector/install-connector[Install a Connector]
+* link:/anypoint-exchange/create-portal[Create Portal]
+* link:/anypoint-exchange/add-asset[Add Asset]
+* link:/anypoint-exchange/administer[Administer]
