--- a/anypoint-exchange/v/latest/_toc.adoc
+++ b/anypoint-exchange/v/latest/_toc.adoc
@@ -4,6 +4,7 @@
 ** link:/anypoint-exchange/access[Access Exchange]
 ** link:/anypoint-exchange/consume[Consume from Exchange]
 ** link:install-connector/install-connector[Install a Connector]
-** link:/anypoint-exchange/create-portal[Create Portal]
+** link:/anypoint-exchange/create-portal[Create or Maintain a Portal Page]
+** link:/anypoint-exchange/editor[Exchange Editor]
 ** link:/anypoint-exchange/add-asset[Add Asset]
 ** link:/anypoint-exchange/administer[Administer]
