--- a/anypoint-exchange/v/latest/_toc.adoc
+++ b/anypoint-exchange/v/latest/_toc.adoc
@@ -3,6 +3,7 @@
 * link:/anypoint-exchange/[Anypoint Exchange]
 ** link:/anypoint-exchange/access[Access Exchange]
 ** link:/anypoint-exchange/consume[Consume from Exchange]
+** link:/anypoint-exchange/templates[Exchange Templates]
 ** link:/anypoint-exchange/install-connector[Install a Connector]
 ** link:/anypoint-exchange/create-portal[Create or Maintain a Portal Page]
 ** link:/anypoint-exchange/editor[Exchange Editor]
