--- a/anypoint-exchange/v/latest/consume.adoc
+++ b/anypoint-exchange/v/latest/consume.adoc
@@ -3,8 +3,13 @@
 ////
 Consume an API - To use an API in <Mozart and> Studio
 Open an Example - Working with Exchange examples
-Implement a Template - Working with Exchange templates
+Implement a Template - Points to Templates section
+
+NOTE: May want to ditch this chapter or else refer to the individual
+files for API, examples, and templates
 ////
+
+
 == See Also
 
 * link:/anypoint-exchange/[Anypoint Exchange]
