--- a/anypoint-exchange/v/latest/consume.adoc
+++ b/anypoint-exchange/v/latest/consume.adoc
@@ -1,9 +1,9 @@
-= Using Anypoint Exchange APIs, Examples, and Templates
+= To Use Anypoint Exchange APIs and Examples
 
 ////
 Consume an API - To use an API in <Mozart and> Studio
 Open an Example - Working with Exchange examples
-Implement a Template - Points to Templates section
+Implement a Template - Points to Templates doc
 
 NOTE: May want to ditch this chapter or else refer to the individual
 files for API, examples, and templates
