--- a/anypoint-studio/v/6/setting-up-your-development-environment.adoc
+++ b/anypoint-studio/v/6/setting-up-your-development-environment.adoc
@@ -7,7 +7,7 @@ The following document outlines the steps to be taken before any significant use
 
 === Check Hardware and Software Requirements
 
-* Review the link:/mule-user-guide/v/3.8/hardware-and-software-requirements[Hardware and Software requirements] and make sure you meet the essentials.
+* Review the link:/anypoint-studio/v/6/hardware-and-software-requirements[Hardware and Software requirements] and make sure you meet the essentials.
 
 === Install Oracle JDK
 
